	* w32inevt.c:
	* w32heap.c:
	* w32font.c:
	* w32fns.c:
	* w32console.c:
	* w32.c:
	* w16select.c:
	* vm-limit.c:
	* unexsol.c:
	* unexec.c:
	* unexcw.c:
	* unexaix.c:
	* undo.c:
	* tparam.c:
	* textprop.c:
	* terminfo.c:
	* terminal.c:
	* termcap.c:
	* term.c:
	* syntax.c:
	* sound.c:
	* sheap.c:
	* search.c:
	* scroll.c:
	* region-cache.c:
	* regex.c:
	* ralloc.c:
	* process.c:
	* print.c:
	* msdos.c:
	* minibuf.c:
	* menu.c:
	* marker.c:
	* macros.c:
	* keymap.c:
	* keyboard.c:
	* intervals.c:
	* insdel.c:
	* indent.c:
	* gtkutil.c:
	* ftxfont.c:
	* ftfont.c:
	* fringe.c:
	* frame.c:
	* fontset.c:
	* font.c:
	* fns.c:
	* floatfns.c:
	* filelock.c:
	* fileio.c:
	* emacs.c:
	* editfns.c:
	* dosfns.c:
	* doprnt.c:
	* doc.c:
	* dispnew.c:
	* dired.c:
	* dbusbind.c:
	* data.c:
	* composite.c:
	* coding.c:
	* cmds.c:
	* cm.c:
	* chartab.c:
	* charset.c:
	* character.c:
	* ccl.c:
	* category.c:
	* casetab.c:
	* casefiddle.c:
	* callproc.c:
	* callint.c:
	* bytecode.c:
	* buffer.c:
	* atimer.c: Include setjmp.h.  (Bug#4643)

2009-10-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	Remove leftover table unibyte_to_multibyte_table.
	* character.c (unibyte_to_multibyte_table): Remove.
	(Funibyte_char_to_multibyte): Use MAKE_CHAR_MULTIBYTE.
	* charset.c (init_charset_once): Don't init unibyte_to_multibyte_table.
	* character.h (UNIBYTE_TO_CHAR): New macro.
	(MAKE_CHAR_MULTIBYTE): Use it.
	(unibyte_to_multibyte_table, unibyte_char_to_multibyte): Remove.
	* xdisp.c (get_next_display_element): USE ASCII_CHAR_P.
	(message_dolog, set_message_1):
	* search.c (Freplace_match):
	* editfns.c (Fcompare_buffer_substrings):
	* fns.c (Fcompare_strings): Use MAKE_CHAR_MULTIBYTE.
	(concat):
	* insdel.c (copy_text, count_size_as_multibyte):
	Use ASCII_CHAR_P and BYTE8_TO_CHAR.
	* term.c (produce_glyphs):
	* syntax.c (skip_chars): Use BYTE8_TO_CHAR.
	* regex.c (RE_CHAR_TO_MULTIBYTE):
	* cmds.c (internal_self_insert):
	* buffer.h (FETCH_CHAR_AS_MULTIBYTE): Use UNIBYTE_TO_CHAR.
